grammar.js
    template: ($) => repeat($._declaration),

    // Each individual "thing" in the file
    _declaration: ($) =>
      choice(
        alias($.comment, $.comment_statement),
        $.doctype,
        $._hbs_statement,
        prec(2, $.style_element),
        prec(2, $.script_element),
        $.element_node,
        prec(-1, $.text_node),
        prec(-2, alias($._loose_brace, $.text_node)),
      ),

    // Any `{{ ... }}` Handlebars statement that renders output: plain/triple
    // mustaches, partials, and the block forms. Membership is defined once
    // here so every context that renders output (declarations, attribute
    // values) allows the same family and cannot drift apart.
    _hbs_statement: ($) =>
      choice(
        $.mustache_statement,
        $.partial_statement,
        $.partial_block_statement,
        $.block_statement,
        $.raw_block_statement,
      ),

    // A `<!DOCTYPE html>` declaration. Full-page Handlebars templates begin
    // with one; Glimmer/Ember component templates never do, so upstream omits
    // it. Matched as a single token so it can never be confused with an HTML
    // comment (`<!-- ... -->`, handled by the external scanner) or a tag.
    text_node: () => token(/[^<>{}]+/),

    // A lone `{` or `}` that isn't part of a `{{ ... }}` delimiter is rendered
    // by Glimmer as literal text (e.g. the trailing `}}` left over when a
    // single-line comment like `{{! ... {{#if}} ... }}` terminates early at the
    // inner `}}`). The low precedence ensures real `{{`/`}}` delimiters, which
    // are longer matches, always win.
    _loose_brace: () => token(prec(-1, /[{}]/)),

    //
    // Primitives
    //

    tag_name: () => /(@?[a-zA-Z0-9]|-|:|\.)+/,

    // "Normal" elements with separate opening and closing tags
    style_element: ($) =>
      prec.right(
        2,
        seq(
          optional($._style_element_whitespace),
          alias($.style_start_tag, $.start_tag),
          repeat(
            choice(
              $.raw_text,
              $._hbs_statement,
              prec(-2, alias($._loose_brace, $.text_node)),
            ),
          ),
          alias($.style_end_tag, $.end_tag),
          optional($._style_element_whitespace),
        ),
      ),

    _style_element_whitespace: () => token(/\s+/),


    // These are only used as alias targets so the parse tree matches the
    // upstream HTML grammar's node names.
    start_tag: ($) =>
      seq("<", $.tag_name, tagBody($), optional($.block_params), ">"),

    end_tag: ($) => seq("</", $.tag_name, ">"),

    script_element: ($) =>
      prec.right(
        2,
        seq(
          optional($._style_element_whitespace),
          alias($.script_start_tag, $.start_tag),
          repeat(
            choice(
              $.raw_text,
              $._hbs_statement,
              prec(-2, alias($._loose_brace, $.text_node)),
            ),
          ),
          alias($.script_end_tag, $.end_tag),
          optional($._style_element_whitespace),
        ),
      ),

    identifier: () => IDENTIFIER_PATTERN,
    path_expression: ($) => seq($.identifier, repeat1(seq(".", $.identifier))),

    // Handlebars parent-context references: `..` (the parent scope itself),
    // `../foo`, `../../foo.bar`. These use `/` as a segment separator, which
    // the plain `identifier` regex forbids, so upstream (which never needs
    // them) parses them into an ERROR. Kept a single token to avoid clashing
    // with the `/` in `</` and `/>` tag delimiters.
    mustache_statement: ($) =>
      choice(
        seq(mustacheOpen(), mustacheContent($), mustacheClose()),
        seq("{{{", mustacheContent($), "}}}"),
      ),

    // Handlebars partial invocation, e.g. `{{> nav}}`, `{{> nav foo}}`,
    // `{{> nav key=value}}` or `{{> partials/header}}`. This is standard
    // Handlebars syntax that plain Glimmer/Ember templates omit; supporting it
    // keeps `.hbs` files that use partials from parsing into an ERROR node.
    _arguments: ($) =>
      choice(
        seq(repeat1(field("argument", $._expression)), repeat($.hash_pair)),
        seq(repeat(field("argument", $._expression)), repeat1($.hash_pair)),
      ),

    helper_invocation: ($) =>
      seq(
        field("helper", choice($.identifier, $.path_expression)),
        $._arguments,
      ),

    //
    // Block Expression
    //

    block_statement_start: ($) =>
      seq(
        mustacheOpen("#"),
        field("path", $.identifier),
        optional($._arguments),
        optional($.block_params),
        mustacheClose(),
      ),

    block_statement_end: ($) =>
      seq(mustacheOpen("/"), field("path", $.identifier), mustacheClose()),

    block_statement: ($) =>
      seq(
        $.block_statement_start,
        repeat(choice(field("program", $._declaration), $.else_statement)),
        $.block_statement_end,
      ),

    // The tag-body counterpart of `block_statement` (see `tagBody`), e.g.
    // `<div {{#if x}}data-y="1"{{/if}}>`. Aliased to `block_statement`.
